# online_shop

./: README.md  blogs.json  category.json  product.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_group.py  add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_publication_status.py  0003_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_details.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  filter_list.html  product_confirm_delete.html  product_detail.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
