[project]
name = "online-shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Svetlana Chukalkina",email = "chukalkinasa@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django (==4.2.2)",
    "redis (>=6.4.0,<7.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
